<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/pichu">
    
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <LinearLayout
            android:background="#015488"
            android:orientation="vertical">

       <!--     <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nova_viagem"
                android:textAppearance="?android:attr/textAppearance"
                android:textStyle="bold"/>-->
        </LinearLayout>

        <TextView
            android:text="@string/destino"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/destino"
            android:inputType="text"/>

        <TextView
            android:text="@string/tipo_da_viagem"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/tipoViagem"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lazer"
                android:checked="true"
                android:text="@string/lazer"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/negocios"
                android:layout_marginLeft="30dp"
                android:text="@string/negocios"/>
        </RadioGroup>

        <TableRow>
            <TextView
                android:layout_gravity="center"
                android:text="@string/data_da_chegada"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>
            <TextView
                android:layout_gravity="center"
                android:text="@string/data_da_saida"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/dataChegada"
                android:onClick="selecionarData"
                android:text="@string/selecione"/>
            <Button
                android:id="@+id/dataSaida"
                android:onClick="selecionarData"
                android:text="@string/selecione"/>
        </TableRow>

        <TextView
            android:text="@string/orcamento"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/orcamento"
            android:inputType="numberDecimal"/>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/quant_de_pessoas"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/quantPessoas"
                android:inputType="number"/>
        </TableRow>

        <Button
            android:onClick="salvarViagem"
            android:text="@string/salvar"/>

    </TableLayout>

</ScrollView>
