<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/muralha">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#015488"
            android:orientation="vertical">

         <!--   <TextView
                android:id="@+id/destino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/novo_gasto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/> -->

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoria"
            android:prompt="@string/categoria">

        </Spinner>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow>
                <TextView android:text="@string/valor"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/data"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/valor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>
                <Button
                    android:id="@+id/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="selecionarData"
                    android:text="@string/selecione"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descricao"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/local"
            android:inputType="text"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarGasto"
            android:text="@string/gastei"/>

    </LinearLayout>
</ScrollView>
